--- a/adobepgallery.html
+++ b/adobepgallery.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery3-40" data-filter="false" style="background-color: rgb(0, 0, 0); padding-top: 6rem; padding-bottom: 1.5rem;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Generator</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery3-40" data-filter="false" style="background-color: rgb(0, 0, 0); padding-top: 6rem; padding-bottom: 1.5rem;">
     <!-- Filter -->
     
 
@@ -221,7 +221,7 @@ Phone: (786)-397-1094<br><br></p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="D807L+qQp8V4k25V2YC5XtCXmZdRbMYO6yLLapcxA5qJm0/Y3fmzwk5DyqCDm/5/ydTUD+m/YYuZzSjGtYtaD1KtJylCux9kLuJh39z7EavlJVrA23VXo7kSkP9O2AJ4" data-form-email="true">
+                    <input type="hidden" value="bdqa4dv7Ar7zb9GJ0ZKZx4aPHwkwGb8HCDVmL3L88WT2vRup/lJh6UesUWz7ZsJYSmPeOQ0fox8hbaBjl0boW86wLmzlTtWFGzXru3G3uYIqzNHdDAaIGO7gOX5jEXSY" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-4m-email">Email<span class="form-asterisk">*</span></label>
